test/corpus/function_with_input.txt
==================
Function with Input
==================

suc : Int -> Int
suc(x) = x

---

(source_file
  (function_definition (identifier) (builtin_type) (builtin_type)
    (pattern
      (identifier) (parameter_list (identifier)) (identifier)
    )
  )
)
