test/corpus/ifthenelse.txt
==================
If Then Else
==================

-- if then else thing
let x = 2 in if x == 2 then True else False

---

(source_file
  (comment)
  (let_expr (identifier) (number)
    (if_then_else (binary_expr (identifier) (number)) (bool) (bool))
  )
)
